Update SaaS Accelerator content and styling

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,7 +16,7 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="webinar-news">
             <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                <strong>Live and recorded marketplace webinars!</strong>
+                Live and recorded marketplace webinars!
             </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="webinar-news" data-bs-parent="#news-accordian">
@@ -36,7 +36,7 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="workshop-news">
             <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                <strong>Technical workshops posted</strong>
+                Technical workshops posted
             </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="workshop-news" data-bs-parent="#news-accordian">
