--- a/src/bonus_content/templates/accelerators.html
+++ b/src/bonus_content/templates/accelerators.html
@@ -18,18 +18,21 @@
     <!-- SaaS Accelerator -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="heading1">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+        <button class="accordion-button bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
             SaaS Accelerator
         </button>
       </h2>
       <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1" data-bs-parent="#accordianItems">
         <div class="accordion-body">
             <p>
-                The SaaS Accelerator provides a fully functional community-led SaaS reference implementation for those interested in publishing transactable SaaS offers in Microsoft's marketplace in hours instead of days. In support of the Saas Accelerator, the Mastering the Marketplace content library has a complete course on how to build a SaaS offer using the SaaS Accelerator.
+                The SaaS Accelerator provides a fully functional community-led SaaS reference implementation for those interested in publishing transactable SaaS offers in Microsoft's marketplace in hours instead of days.
+            </p>
+            <p>
+              In support of the Saas Accelerator, the Mastering the Marketplace content library has a complete course on how to build a SaaS offer using the SaaS Accelerator.
             </p>
             <ul>
-                <li><a href="https://aka.ms/SaaSAccelerator" target="_blank">SaaS Accelerator on GitHub</a></li>
-                <li><a href="{{ url_for('content.playlist', playlist_id='f7b33259-1fdc-4641-aa7e-a77d5e19146a') }}">SaaS Accelerator course</a></li>
+              <li><a href="{{ url_for('content.playlist', playlist_id='f7b33259-1fdc-4641-aa7e-a77d5e19146a') }}">SaaS Accelerator course</a></li>
+              <li><a href="https://aka.ms/SaaSAccelerator" target="_blank">The project on GitHub</a></li>
             </ul>
         </div>
       </div>
@@ -37,7 +40,7 @@
     <!-- .NET SaaS client library -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="heading2">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+        <button class="accordion-button bg-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
             .NET SaaS client library
         </button>
       </h2>
@@ -56,7 +59,7 @@
     <!-- Java SaaS client library -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="heading3">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+        <button class="accordion-button bg-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
             Java SaaS client library
         </button>
       </h2>
@@ -74,7 +77,7 @@
     <!-- Custom meters accelerator -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="heading5">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
+            <button class="accordion-button bg-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
                 Custom Meters Accelerator
             </button>
         </h2>
@@ -95,7 +98,7 @@
     <!-- Metered Billing Accelerator -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="heading4">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+          <button class="accordion-button bg-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
             Metered Billing Accelerator
           </button>
         </h2>
@@ -117,7 +120,7 @@
     <!-- Commercial Marketplace solutions repository -->
     <div class="accordion-item">
         <h2 class="accordion-header" id="heading6">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
+          <button class="accordion-button bg-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
             Commercial Marketplace starter solutions
           </button>
         </h2>
@@ -136,7 +139,7 @@
     <!-- ARM TTK -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="heading7">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
+        <button class="accordion-button bg-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
           ARM-TTK
         </button>
       </h2>
