--- a/src/static/style.css
+++ b/src/static/style.css
@@ -73,7 +73,17 @@
 }
 
 .accordion-button:not(.collapsed) {
-    background-color: #0d6efd!important;
-    color: #fff;
+    background-color: #adb5bd!important;
+    box-shadow: none !important;
+    color: #000 !important;
+    font-weight: bold;
+    font-size: large;
+}
+
+.accordion-button {
+    box-shadow: none !important;
+    color: #000 !important;
+    font-weight: bold;
+    font-size: large;
 }
 
