--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -39,7 +39,7 @@
           {% if nav_model["user"] %}
             <li class="nav-item dropdown">
               <a class="active nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                {{ nav_model["user"]["name"] }}
+                {{ nav_model["user"]["companyname"] }}
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a></li>
@@ -47,7 +47,8 @@
             </li>
           {% else %}
             <li class="nav-item">
-              <a class="active nav-link" href="{{ url_for('auth.login') }}">Sign in</a>
+              <a class="active nav-link" href="{{ url_for('auth.signin') }}" data-bs-toggle="modal" data-bs-target="#signin_modal">Sign in</a>
+              
             </li>
           {% endif %}
         </ul>
@@ -61,3 +62,55 @@
       </div>
     </div>
   </nav>
+
+
+  {% if not nav_model["user"] %}
+
+  <form method="post" action="{{ url_for('auth.signin') }}">
+    
+  <!-- Modal -->
+  <div class="modal fade" id="signin_modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="signin_modalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered"">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="signin_modalLabel">Sign in</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="container-fluid">
+            <div class="row">
+              <p>Please provide your company's name and URL to sign in and get full access to all content.</p>
+              <p>We do not collect any persoanlly identifying information.</p>
+            </div>
+            <div class="row">
+              <label for="companyname" class="form-label">Company name</label>
+              <input type="text" class="form-control" id="companyname" name="companyname" required>
+    
+              <label for="companyurl" class="form-label">Company URL</label>
+              <input type="text" class="form-control" id="companyurl" name="companyurl" required>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div class="container-fluid">
+
+            <div class="row">
+              <div class="col-sm-6">
+                <button type="button" class="btn btn-secondary form-control" data-bs-dismiss="modal">Cancel</button>
+              </div>
+              <div class="col-sm-6">
+                <button type="submit" class="btn btn-primary form-control">Sign in</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  </form>
+
+  {% endif %}
+
+  {% block content %}{% endblock %}
