--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -37,18 +37,12 @@
           </li>
           <!-- User -->
           {% if nav_model["user"] %}
-            <li class="nav-item dropdown">
-              <a class="active nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                {{ nav_model["user"]["companyname"] }}
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="active nav-link" href="{{ url_for('auth.logout') }}">Sign out</a>
             </li>
           {% else %}
             <li class="nav-item">
               <a class="active nav-link" href="{{ url_for('auth.signin') }}" data-bs-toggle="modal" data-bs-target="#signin_modal">Sign in</a>
-              
             </li>
           {% endif %}
         </ul>
@@ -80,14 +74,14 @@
           <div class="container-fluid">
             <div class="row">
               <p>Please provide your company's name and URL to sign in and get full access to all content.</p>
-              <p>We do not collect any persoanlly identifying information.</p>
+              <p>We do not collect or store any personally identifying information.</p>
             </div>
             <div class="row">
               <label for="companyname" class="form-label">Company name</label>
-              <input type="text" class="form-control" id="companyname" name="companyname" required>
+              <input type="text" class="form-control" id="companyname" name="companyname" minlength="3" maxlength="20" required>
     
               <label for="companyurl" class="form-label">Company URL</label>
-              <input type="text" class="form-control" id="companyurl" name="companyurl" required>
+              <input type="url" class="form-control" id="companyurl" name="companyurl" minlength="9" maxlength="30" required>
             </div>
           </div>
         </div>
