logins are logged to azure table

--- a/src/templates/error.html
+++ b/src/templates/error.html
@@ -9,7 +9,7 @@
             <strong>{{ model.error_title }}</strong>
         </p>
         <p>
-            {{ model.error_detail }}
+            {{ model.error_message }}
         </p>
 
     </div>
