--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -54,9 +54,28 @@
             </div>
             </div>
         </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="oh-news">
+            <button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                Live Marketplace Office Hours
+            </button>
+            </h2>
+            <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="oh-news" data-bs-parent="#news-accordian">
+            <div class="accordion-body">
+                <p>
+                    Marketplace Office Hours are live Q&A opportunities with marketplace experts to assist you and share best practices.
+                </p>
+                <p>
+                    <a class="btn btn-primary" href="https://aka.ms/MTMofficehours" target="_blank">Join the conversation</a>
+                </p>
+                        </div>
+            </div>
+        </div>
+        
     </div>
     <!-- end accordian -->
-
+    
+    <!-- Card row -->
     <div>
         <div class="row card-row">
             <div class="col-sm-6">
