adding news carousel images and template

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,7 +11,7 @@
     </div>
 
 
-    {% include 'news_accordian.html' %}
+    {% include 'news_carousel.html' %}
     
     <!-- Card row -->
     <div>
