--- a/src/static/style.css
+++ b/src/static/style.css
@@ -87,3 +87,20 @@
     font-size: large;
 }
 
+.news-container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;  /* or any specific width */
+    justify-content: center;
+}
+
+.news-item {
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+}
+
+.news-image {
+    width: auto;
+    height: auto;
+}
