--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,3 +1,12 @@
+.left-nav {
+    width: 10%;
+    float: left;
+    background-color: #3b2e58;
+}
+
+
+
+
 .accordion-button {
     box-shadow: none !important;
     color: #000 !important;
@@ -62,6 +71,7 @@
 .dropdown-item:active, .dropdown-item:focus, .dropdown-item:hover {
     color: #3b2e58!important;
     background-color: #fff;
+    font-weight: bold;
 }
 
 .dropdown-menu {
@@ -88,7 +98,7 @@
 .main {
     margin-top: 50px;
     width: 70%;
-    /* margin-bottom: 50px; */
+    float: right;
 }
 
 .main-title {
@@ -103,7 +113,6 @@
 
 .navbar {
     margin-bottom: 20px;
-    border-radius: 8px;
     background-color: #3b2e58;
 }
 
