--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 
-    {% include 'news_carousel.html' %}
 
     <div style="margin-bottom: 50px;">
         You have reached the the most comprehensive on-demand content available to help you develop transactable offers for the
         Microsoft commercial marketplace. This site features instructional videos, 
         interactive hands-on labs, and sample code to provide a better understanding of the marketplace.
     </div>
+
+    {% include 'news_accordian.html' %}
     
     <!-- Card row -->
     <div>
