--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,11 +8,11 @@
 
     <div class="main">
       <div class="container-xl my-md-4 bd-layout">
-        <div class="row">
-          <div class="col-3">
-            {% include 'left-nav.html' %}
+        <div class="row justify-content-md-center">
+          <div class="col-2">
+              {% include 'left-nav.html' %}
           </div>
-          <div class="col-9">
+          <div class="col-8">
             <main class="bd-main order-1">
 
               {% block content %}
