--- a/src/templates/left-nav.html
+++ b/src/templates/left-nav.html
@@ -24,13 +24,10 @@
     Resources
   </li>
   <li class="nav-item nav-item-sidebar">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="{{ url_for('bonus_content.page', page='accelerators') }}">Technical accelerators</a>
   </li>
   <li class="nav-item nav-item-sidebar">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" href="{{ url_for('content.content_log', num_items=5) }}">Content change log</a>
   </li>
-  <li class="nav-item nav-item-sidebar">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-  </li>
-
+  
 </ul>
