--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,7 +14,7 @@
     <!-- Card row -->
     <div>
         <div class="row card-row">
-            <div class="col-sm-6">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mastering Partner Center</h5>
@@ -26,11 +26,11 @@
                                 Learn more about Partner Center in this ever-expanding content demonstarting how to use the portal to publish offers and more.
                             </p>
                         </div>
-                        <a href="#" class="btn btn-primary">Take me to it</a>
+                        <a href="#" class="btn btn-primary">Learn it now</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mastering the SaaS Accelerator</h5>
@@ -42,7 +42,8 @@
                             The SaaS accelerator is a turnkey solution meeting the technical requirements for a SaaS offer and can be installed in 20 minutes.                        
                         </p>
                         </div>
-                        <a href="#" class="btn btn-primary">Take me to it</a>
+                        <a href="https://aka.ms/MasteringTheMarketplace/sa" class="btn btn-primary">Learn it now</a>
+                        <a href="https://aka.ms/SaaSAccelerator" class="btn btn-primary" target="_blank">The GitHub project</a>
                     </div>
 
                 </div>
@@ -50,7 +51,7 @@
         </div>
 
         <div class="row card-row">
-            <div class="col-sm-6">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mastering SaaS offers</h5>
@@ -63,11 +64,11 @@
                                 running in days instead of weeks.
                             </p>
                         </div>
-                        <a href="#" class="btn btn-primary">Take me to it</a>
+                        <a href="#" class="btn btn-primary">Learn it now</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col">
                 <div class="card">
                     <div class="card">
                         <div class="card-body">
@@ -80,7 +81,7 @@
                                     Learn how in this demo-heavy technical course taht takes you step-by-step through the process.
                                 </p>                         
                             </div>
-                            <a href="#" class="btn btn-primary">Take me to it</a>
+                            <a href="#" class="btn btn-primary">Learn it now</a>
                         </div>
                     </div>
                 </div>
@@ -89,18 +90,18 @@
 
 
         <div class="row card-row">
-            <div class="col-sm-6">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mastering Managed Applications offers</h5>
                         <p class="card-text">
                             With a powerful ARM based deployment model, Azure Managed Applications are popular among those who want to deploy resources into the customer's environment, but still maintain control of those resources.
                         </p>
-                        <a href="#" class="btn btn-primary">Take me to it</a>
+                        <a href="#" class="btn btn-primary">Learn it now</a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Mastering virtual machine offers</h5>
@@ -112,7 +113,7 @@
                                 You'll learn everything from how to package your solution to how to make it available on the Azure marketplace.
                             </p>
                         </div>
-                        <a href="#" class="btn btn-primary">Take me to it</a>
+                        <a href="#" class="btn btn-primary">Learn it now</a>
                     </div>
                 </div>
             </div>
