--- a/src/templates/news_accordian.html
+++ b/src/templates/news_accordian.html
@@ -7,7 +7,7 @@
         <p>Webinars occur almost daily and cover all things marketplace from technical implementations to accelerating your business.</p>
         <p>Not only can you attend live, but webinars are recorded for later viewing.</p>
         <p>
-          <a class="btn btn-primary" href="https://aka.ms/MTMwebinars" target="_blank">Check out the schedule</a>
+          <a class="btn btn-light" href="https://aka.ms/MTMwebinars" target="_blank">Check out the schedule</a>
         </p>
       </div>
     </div>
@@ -19,7 +19,7 @@
         <p>Learn from your favorite Mastering the Marketplace content authors in live virtual workshops focused on specific technologies and offer types.</p>
         <p>Workshops are a great opportunity to get from concept to reality in building your solutions for the marketplace.</p>
         <p>
-          <a class="btn btn-primary" href="https://aka.ms/MTMworkshops" target="_blank">Sign up for a workshop</a>
+          <a class="btn btn-light" href="https://aka.ms/MTMworkshops" target="_blank">Sign up for a workshop</a>
         </p>
       </div>
     </div>
@@ -30,7 +30,7 @@
       <div class="accordion-body">
         <p>Marketplace Office Hours are live question and answer opportunities with marketplace experts to assist you and share best practices.</p>
         <p>
-          <a class="btn btn-primary" href="https://aka.ms/MTMofficehours" target="_blank">Join the conversation</a>
+          <a class="btn btn-light" href="https://aka.ms/MTMofficehours" target="_blank">Join the conversation</a>
         </p>
       </div>
     </div>
