--- a/src/content/templates/playlist.html
+++ b/src/content/templates/playlist.html
@@ -5,7 +5,7 @@
 
   <div class="list-group list-group-flush">
     {% for content in model["content"]: %}
-      <a href="{{ url_for('content.content_detail', content_id=content['id']) }}" class="list-group-item list-group-item-action list-item-content-title">{{ content["title"] }}</a>
+      <a href="{{ url_for('content.index', content_id=content['id']) }}" class="list-group-item list-group-item-action list-item-content-title">{{ content["title"] }}</a>
     {% endfor %}
   </div>
   
