--- a/src/content/templates/content_log.html
+++ b/src/content/templates/content_log.html
@@ -18,7 +18,7 @@
             {% for item in model %}
               <tr>
                 <th scope="row">{{ loop.index }}</th>
-                <td><a href="{{ url_for('content.content_detail', content_id = item.id) }}">{{ item.title }}</a></td>
+                <td><a href="{{ url_for('content.index', content_id = item.id) }}">{{ item.title }}</a></td>
                 <td>{{ item.date_created.strftime('%B %d, %Y') }}</td>
               </tr>
             {% endfor %}
