--- a/src/search/templates/search_index.html
+++ b/src/search/templates/search_index.html
@@ -14,7 +14,7 @@
                 <tr>
                     <th scope="row">{{ loop.index }}</th>
                     <td>
-                        <a href="{{ url_for('content.content_detail', content_id=result['id']) }}" class="">{{ result['title'] }}</a>
+                        <a href="{{ url_for('content.index', content_id=result['id']) }}" class="">{{ result['title'] }}</a>
                     </td>
                 </tr>
             {% endfor %}
