--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -30,7 +30,7 @@
 
             <div class="row">
               <div class="col-sm-6">
-                <button type="button" class="btn btn-secondary form-control" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-light form-control" data-bs-dismiss="modal">Cancel</button>
               </div>
               <div class="col-sm-6">
                 <button type="submit" class="btn btn-primary form-control">Sign in</button>
