--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -1,8 +1,8 @@
 <head>
     <title>Mastering the Marketplace</title>
+    <link rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone.css" type="text/css" />
     <link rel="stylesheet" href="/static/style.css"/>
-    <link rel="stylesheet" href="/static/richtext.min.css"/>
 </head>
