--- a/src/static/style.css
+++ b/src/static/style.css
@@ -33,16 +33,26 @@ a {
     font-weight: 400;
 }
 
-.btn-light, .btn-light:active, .btn-light:focus, .btn-light:hover {
+.btn-light, .btn-light:active, .btn-light:focus {
     color: #3b2e58;
     background-color: #c3b5e0;
-    border-color: #c3b5e0;
+    border-color: #3b2e58;
 }
 
-.btn-primary, .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
+.btn-light:hover {
+    color: #fff;
+    background-color: #3b2e58;
+}
+
+.btn-primary, .btn-primary:active, .btn-primary:focus {
     color: #fff;
     background-color: #3b2e58;
     border-color: #3b2e58;
+}
+
+.btn-primary:hover {
+    color: #3b2e58;
+    background-color: #c3b5e0;
 }
 
 .card-row {
