--- a/src/templates/news_accordian.html
+++ b/src/templates/news_accordian.html
@@ -2,12 +2,15 @@
 <div class="accordion" id="news-accordian">
   <div class="accordion-item">
     <h2 class="accordion-header" id="webinar-news"><button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Live and recorded marketplace webinars!</button></h2>
-    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="webinar-news" data-bs-parent="#news-accordian">
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="webinar-news" data-bs-parent="#news-accordian">
       <div class="accordion-body">
+
+        <img src="{{ url_for('static', filename='news-images/webinars-logo.png') }}" alt="webinar image" class="news-icon-right">
+        
         <p>Webinars occur almost daily and cover all things marketplace from technical implementations to accelerating your business.</p>
         <p>Not only can you attend live, but webinars are recorded for later viewing.</p>
         <p>
-          <a class="btn btn-light" href="https://aka.ms/MTMwebinars" target="_blank">Check out the schedule</a>
+          <a class="btn btn-primary" href="https://aka.ms/MTMwebinars" target="_blank">Check out the schedule</a>
         </p>
       </div>
     </div>
@@ -16,10 +19,13 @@
     <h2 class="accordion-header" id="workshop-news"><button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Technical workshops posted</button></h2>
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="workshop-news" data-bs-parent="#news-accordian">
       <div class="accordion-body">
+
+        <img src="{{ url_for('static', filename='news-images/tech-workshops-logo.png') }}" alt="workshops image" class="news-icon-left">
+
         <p>Learn from your favorite Mastering the Marketplace content authors in live virtual workshops focused on specific technologies and offer types.</p>
         <p>Workshops are a great opportunity to get from concept to reality in building your solutions for the marketplace.</p>
-        <p>
-          <a class="btn btn-light" href="https://aka.ms/MTMworkshops" target="_blank">Sign up for a workshop</a>
+        <p style="text-align: right;">
+          <a class="btn btn-primary" href="https://aka.ms/MTMworkshops" target="_blank">Sign up for a workshop</a>
         </p>
       </div>
     </div>
@@ -28,9 +34,14 @@
     <h2 class="accordion-header" id="oh-news"><button class="accordion-button collapsed bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">Office Hours Q&A</button></h2>
     <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="oh-news" data-bs-parent="#news-accordian">
       <div class="accordion-body">
+
+        <img src="{{ url_for('static', filename='news-images/office-hours-logo.png') }}" alt="office hours image" class="news-icon-right">
+
         <p>Marketplace Office Hours are live question and answer opportunities with marketplace experts to assist you and share best practices.</p>
+        <p>Join our business and technical teams for an open Q&A in sessions dedicated to partners and customer conversations.</P>
+        <p>Send questions before or chat live during the webinar.</p>
         <p>
-          <a class="btn btn-light" href="https://aka.ms/MTMofficehours" target="_blank">Join the conversation</a>
+          <a class="btn btn-primary" href="https://aka.ms/MTMofficehours" target="_blank">Join the conversation</a>
         </p>
       </div>
     </div>
