changed menu item wording

--- a/src/templates/left-nav.html
+++ b/src/templates/left-nav.html
@@ -27,7 +27,7 @@
     <a class="nav-link" href="{{ url_for('bonus_content.page', page='accelerators') }}">Technical accelerators</a>
   </li>
   <li class="nav-item nav-item-sidebar">
-    <a class="nav-link" href="{{ url_for('content.content_log', num_items=5) }}">Content change log</a>
+    <a class="nav-link" href="{{ url_for('content.content_log', num_items=10) }}">What's new on the site</a>
   </li>
   
 </ul>
