added title to index page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+    <h2 style="margin-bottom: 20px;">Mastering the Marketplace</h2>
 
     <div style="margin-bottom: 50px;">
         You have reached the the most comprehensive on-demand content available to help you develop transactable offers for the
