--- a/src/templates/left-nav.html
+++ b/src/templates/left-nav.html
@@ -8,23 +8,25 @@
   {% endfor %}
 
   <li class="nav-item nav-item-header">
-    Bonus content
-  </li>
-  <li class="nav-item nav-item-sidebar">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item nav-item-sidebar">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item nav-item-sidebar">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-  </li>
-
-  <li class="nav-item nav-item-header">
     Resources
   </li>
   <li class="nav-item nav-item-sidebar">
+    <a class="nav-link" href="{{ url_for('bonus_content.page', page='placeholder') }}">Choose your offer type</a>
+  </li>
+  <li class="nav-item nav-item-sidebar">
     <a class="nav-link" href="{{ url_for('bonus_content.page', page='accelerators') }}">Technical accelerators</a>
+  </li>
+  <li class="nav-item nav-item-sidebar">
+    <a class="nav-link" href="{{ url_for('bonus_content.page', page='placeholder') }}">Marketplace playbooks</a>
+  </li>
+  <li class="nav-item nav-item-sidebar">
+    <a class="nav-link" href="https://aka.ms/MTMworkshops">Live workshops</a>
+  </li>
+  <li class="nav-item nav-item-sidebar">
+    <a class="nav-link" href="https://aka.ms/MTMwebinars">Marketplace webinars</a>
+  </li>
+  <li class="nav-item nav-item-sidebar">
+    <a class="nav-link" href="https://aka.ms/MTMofficehours">Office Hours Q&A</a>
   </li>
   <li class="nav-item nav-item-sidebar">
     <a class="nav-link" href="{{ url_for('content.content_log', num_items=10) }}">What's new on the site</a>
