hooked up playlists

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -27,7 +27,7 @@
                                 Learn more about Partner Center in this ever-expanding content demonstarting how to use the portal to publish offers and more.
                             </p>
                         </div>
-                        <a href="#" class="btn btn-primary">Learn it now</a>
+                        <a href="{{ url_for('content.playlist', playlist_id='8fa11e39-67c7-4d0e-92ff-b478aa72a04c') }}" class="btn btn-primary">Learn it now</a>
                     </div>
                 </div>
             </div>
@@ -43,7 +43,7 @@
                             The SaaS accelerator is a turnkey solution meeting the technical requirements for a SaaS offer and can be installed in 20 minutes.                        
                         </p>
                         </div>
-                        <a href="https://aka.ms/MasteringTheMarketplace/sa" class="btn btn-primary">Learn it now</a>
+                        <a href="{{ url_for('content.playlist', playlist_id='4643d653-296a-490b-85ad-57fbd57dbfd1') }}" class="btn btn-primary">Learn it now</a>
                         <a href="https://aka.ms/SaaSAccelerator" class="btn btn-primary" target="_blank">The GitHub project</a>
                     </div>
 
@@ -58,14 +58,14 @@
                         <h5 class="card-title">Mastering SaaS offers</h5>
                         <div class="card-text">
                             <p>
-                                This comprehensive content takes you through all you need to get a custom SaaS offer up and running. 
+                                This comprehensive content takes you through all you need to get a custom SaaS offer on the marketplace. 
                             </p>
                             <p>
-                                From landing pages to webhooks, the technical course will help you get your SaaS offer up and 
+                                From landing pages to webhooks, the course will help you get your SaaS offer up and 
                                 running in days instead of weeks.
                             </p>
                         </div>
-                        <a href="#" class="btn btn-primary">Learn it now</a>
+                        <a href="{{ url_for('content.playlist', playlist_id='c76d64fc-8c7e-4ee3-bfbd-2f5313231ff7') }}" class="btn btn-primary">Learn it now</a>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                                     Learn how in this demo-heavy technical course taht takes you step-by-step through the process.
                                 </p>                         
                             </div>
-                            <a href="#" class="btn btn-primary">Learn it now</a>
+                            <a href="{{ url_for('content.playlist', playlist_id='0dc3f87f-e92b-4593-afdd-f6b828b64a4b') }}" class="btn btn-primary">Learn it now</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                         <p class="card-text">
                             With a powerful ARM based deployment model, Azure Managed Applications are popular among those who want to deploy resources into the customer's environment, but still maintain control of those resources.
                         </p>
-                        <a href="#" class="btn btn-primary">Learn it now</a>
+                        <a href="{{ url_for('content.playlist', playlist_id='0dc3f87f-e92b-4593-afdd-f6b828b64a4b') }}" class="btn btn-primary">Learn it now</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                                 You'll learn everything from how to package your solution to how to make it available on the Azure marketplace.
                             </p>
                         </div>
-                        <a href="#" class="btn btn-primary">Learn it now</a>
+                        <a href="{{ url_for('content.playlist', playlist_id='aa318229-e605-4e84-b9cf-260cf452b532') }}" class="btn btn-primary">Learn it now</a>
                     </div>
                 </div>
             </div>
