moved to carousel

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
         interactive hands-on labs, and sample code to provide a better understanding of the marketplace.
     </div>
 
-    {% include 'news_accordian.html' %}
+    {% include 'news_carousel.html' %}
     
     <!-- Card row -->
     <div>
