--- a/src/templates/news_carousel.html
+++ b/src/templates/news_carousel.html
@@ -1,25 +1,23 @@
 <!-- news_carousel -->
 <div class="news-container">
-<div id="news_carousel" class="carousel carousel-dark" data-bs-ride="carousel">
+<div id="news_carousel" class="carousel slide carousel-dark" data-bs-touch="false" data-bs-interval="5000" data-bs-ride="carousel">
     <div class="carousel-inner">
-    <div class="carousel-item news-item active">
-      <a href="https://aka.ms/MTMwebinars" target="_blank"><img src="{{ url_for('static', filename = 'carousel-news-items/slide1-webinars.png') }}" class="news-image d-block w-30" alt="Webinars" /></a>
+    <div class="carousel-item active">
+      <a href="https://aka.ms/MTMwebinars" target="_blank">
+        <img src="{{ url_for('static', filename = 'carousel-news-items/webinars.png') }}" class="news-image w-100" alt="Webinars" />
+      </a>
     </div>
-    <div class="carousel-item news-item">
-      <a href="https://aka.ms/MTMworkshops" target="_blank"><img src="{{ url_for('static', filename = 'carousel-news-items/slide2-workshops.png') }}" class="news-image d-block w-30" alt="Workshops" /></a>
+    <div class="carousel-item">
+      <a href="https://aka.ms/MTMworkshops" target="_blank">
+        <img src="{{ url_for('static', filename = 'carousel-news-items/workshops.png') }}" class="news-image d-block w-100" alt="Workshops" />
+      </a>
     </div>
-    <div class="carousel-item news-item">
-      <a href="https://aka.ms/MTMofficehours" target="_blank"><img src="{{ url_for('static', filename = 'carousel-news-items/slide3-officehours.png') }}" class="news-image d-block w-30" alt="Office Hours" /></a>
+    <div class="carousel-item">
+      <a href="https://aka.ms/MTMofficehours" target="_blank">
+        <img src="{{ url_for('static', filename = 'carousel-news-items/officehours.png') }}" class="news-image d-block w-100" alt="Office Hours" />
+      </a>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#news_carousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#news_carousel" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
 </div>
 <!-- end news_carousel -->
