--- a/src/content/templates/playlist.html
+++ b/src/content/templates/playlist.html
@@ -1,25 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h3 class="content-detail-title">{{ model["name"] }}</h3>
+  <h3 class="content-detail-title">{{ model.get_playlist()["name"] }}</h3>
   
   <div>
-    {{ model["description"] | safe }}
+    {{ model.get_playlist()["description"] | safe }}
   </div>
 
-  <table class="table">
+  <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">Title</th>
+        <th scope="col">Module title</th>
       </tr>
     </thead>
     <tbody>
 
-      {% for content in model["content"]: %}
+      {% for content in model.get_content_infos(): %}
       <tr>
         <th scope="row">{{ loop.index }} </th>
-        <td><a href="{{ url_for('content.index', content_id=content['id']) }}">{{ content["title"] }}</a></td>
+        <td>
+          <a href="{{ url_for('content.index', content_id=content['id']) }}">{{ content["title"] }}</a>
+        </td>
       </tr>
       {% endfor %}
 
