--- a/src/templates/left-nav.html
+++ b/src/templates/left-nav.html
@@ -11,13 +11,13 @@
     Resources
   </li>
   <li class="nav-item nav-item-sidebar">
-    <a class="nav-link" href="{{ url_for('bonus_content.page', page='placeholder') }}">Choose your offer type</a>
+    <a class="nav-link" href="{{ url_for('bonus_content.page', page='choose_your_offer_type') }}">Choose your offer type</a>
   </li>
   <li class="nav-item nav-item-sidebar">
     <a class="nav-link" href="{{ url_for('bonus_content.page', page='accelerators') }}">Technical accelerators</a>
   </li>
   <li class="nav-item nav-item-sidebar">
-    <a class="nav-link" href="{{ url_for('bonus_content.page', page='placeholder') }}">Marketplace playbooks</a>
+    <a class="nav-link" href="{{ url_for('bonus_content.page', page='playbooks') }}">Marketplace playbooks</a>
   </li>
   <li class="nav-item nav-item-sidebar">
     <a class="nav-link" href="https://aka.ms/MTMworkshops">Live workshops</a>
